refactor: 코드 리팩토링 및 로깅 시스템 개선
- README.md에 리팩토링 사항 추가
- 의존성 주입 방식을 생성자 주입으로 통일
- 로깅 시스템을 SLF4J로 전환하고 적절한 로그 레벨 적용
- 서비스 레이어 분리 및 유틸리티 클래스 추가
- 예외 처리 및 코드 품질 개선
- 패키지 구조 정리 및 계층별 책임 분리