@@ -3,9 +3,9 @@ package org.example.smartScore.config;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
 import org.springframework.security.authentication.BadCredentialsException;
-import org.springframework.security.authentication.InternalAuthenticationServiceException;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationFailureHandler;
@@ -13,26 +13,38 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
+@Slf4j
 @Component
 public class CustomAuthFailureHandler extends SimpleUrlAuthenticationFailureHandler {
+    
+    private static final String ERROR_PARAM = "error=true";
+    private static final String EXCEPTION_PARAM = "exception=";
+
     @Override
     public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response,
                                         AuthenticationException exception) throws IOException, ServletException {
-        String errorMessage;
-        if (exception instanceof BadCredentialsException) {
-            errorMessage = "아이디 또는 비밀번호가 맞지 않습니다. 다시 확인해 주세요.";
-        } else if (exception instanceof UsernameNotFoundException) {
-            errorMessage = "계정이 존재하지 않습니다. 회원가입 진행 후 로그인 해주세요.";
-        } else if (exception instanceof AuthenticationCredentialsNotFoundException) {
-            errorMessage = "인증 요청이 거부되었습니다.";
-        } else {
-            errorMessage = "로그인에 실패했습니다. 다시 시도해주세요";
-        }
-        errorMessage = URLEncoder.encode(errorMessage, "UTF-8");
-
-        setDefaultFailureUrl("/login?error=true&exception="+errorMessage);
+        
+        String errorMessage = getErrorMessage(exception);
+        log.warn("Authentication failure for user: {}, reason: {}", 
+                request.getParameter("username"), errorMessage);
+        
+        String encodedMessage = URLEncoder.encode(errorMessage, StandardCharsets.UTF_8);
+        setDefaultFailureUrl("/login?" + ERROR_PARAM + "&" + EXCEPTION_PARAM + encodedMessage);
 
         super.onAuthenticationFailure(request, response, exception);
+    }
+
+    private String getErrorMessage(AuthenticationException exception) {
+        if (exception instanceof BadCredentialsException) {
+            return "아이디 또는 비밀번호가 맞지 않습니다. 다시 확인해 주세요.";
+        } else if (exception instanceof UsernameNotFoundException) {
+            return "계정이 존재하지 않습니다. 회원가입 진행 후 로그인 해주세요.";
+        } else if (exception instanceof AuthenticationCredentialsNotFoundException) {
+            return "인증 요청이 거부되었습니다.";
+        } else {
+            return "로그인에 실패했습니다. 다시 시도해주세요";
+        }
     }
 }
